java8.spoofax3/test/statics/java/locals/classdeclsinblockoutoforder.no.spt
module locals/classdeclsinblockoutoforder_no

language metaborg-java

test classdeclsinblockoutoforder [[

test;



// error: cannot find symbol

[Test]
class A {
    public void m() {
        class C extends B {}
        class B {}
    }
}


]] analysis fails
   run javacFails to ""
